package com.lldbackend.bms_lld_123124.models;

public enum ScreenStatus {
    AVAILABLE,
    UNAVAILABLE,
}
